rename some navbar items to fix spacing issue on ipads

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,10 +55,3 @@ canvas {
   left: 0;
   top: 0;
 } */
-
-@media screen and (max-width: 1024px) {
-  .nav-item,
-  .navbar-brand {
-    font-size: 1rem;
-  }
-}
